[package]
name = "ref-exchange"
version = "0.2.0"
authors = ["Illia Polosukhin <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { path = "../../../near/near-sdk-rs/near-sdk" }
near-contract-standards = {  path = "../../../near/near-sdk-rs/near-contract-standards" }
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
near-sdk-sim = {  path = "../../../near/near-sdk-rs/near-sdk-sim" }
# near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", rev = "cb379a451a02a24901cf3c654db970680a0f4ea4" }
test-token = { path = "../test-token" }
